[package]
name = "reth-archival-node"
version = "1.1.13"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
keywords = ["ethereum", "archival", "blockchain", "node"]
categories = ["blockchain", "database"]
description = "A modular archival Ethereum node implementation"

[[bin]]
name = "reth-archival-node"
path = "src/main.rs"

[[bin]]
name = "simple-archival-node"
path = "src/simple_main.rs"

[dependencies]
# Core dependencies
reth = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-util = { workspace = true }
reth-config = { workspace = true }
reth-consensus = { workspace = true }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-db-common = { workspace = true }
reth-downloaders = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-network = { workspace = true }
reth-network-api = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-payload-builder = { workspace = true }
reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-prune = { workspace = true }
reth-prune-types = { workspace = true }
reth-stages = { workspace = true }
reth-static-file = { workspace = true }
reth-storage-api = { workspace = true }
reth-tasks = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-trie = { workspace = true }
reth-trie-common = { workspace = true }
reth-trie-db = { workspace = true }

# RPC dependencies
reth-rpc = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-builder = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-layer = { workspace = true }
reth-rpc-server-types = { workspace = true }

# Async and networking
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs"] }

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography and primitives  
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-eips = { workspace = true }

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
clap = { version = "4", features = ["derive", "env"] }
once_cell = "1.19"
parking_lot = "0.12"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "archival-node"
path = "src/main.rs"

[features]
default = ["full"]
full = ["websockets", "archival", "proof-api", "metrics"]
websockets = []
archival = []
proof-api = []
metrics = []
